--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,69 +2,10 @@ default:
   image: "archlinux:latest"
 
 stages:
-  - lint
-  - build
   - publish
-
-shellcheck:
-  stage: lint
-  before_script:
-    - pacman -Syu --needed --noconfirm shellcheck
-  script:
-    - shellcheck **/*.sh
-
-shfmt:
-  stage: lint
-  before_script:
-    - pacman -Syu --needed --noconfirm shfmt
-  script:
-    - shfmt -i 2 -ci -d **/*.sh
-
-.build:
-  stage: build
-  before_script:
-    - pacman -Syu --needed --noconfirm qemu-headless libisoburn
-  script:
-    - echo "BUILD_VERSION=$(date +%Y.%m.%d)" > build.env
-    - export $(< build.env)
-    - ./build-host.sh
-  after_script:
-    - echo "image_size_megabytes{image=\"qcow2\"} $(du -m output/*cloudimg*qcow2)" > metrics.txt
-    - echo "image_size_megabytes{image=\"libvirt\"} $(du -m output/*libvirt*box)" >> metrics.txt
-    - echo "image_size_megabytes{image=\"virtualbox\"} $(du -m output/*virtualbox*box)" >> metrics.txt
-  artifacts:
-    reports:
-      metrics: metrics.txt
-      dotenv: build.env
-
-build:
-  extends: .build
-  except:
-    - master
-
-build:secure:
-  extends: .build
-  tags:
-    - secure
-  only:
-    - master
-    - schedules
-    - tags
-  artifacts:
-    name: "output"
-    paths:
-      - "output/*"
-    expire_in: 2d
 
 tag_release:
   stage: publish
-  tags:
-    - secure
-  only:
-    refs:
-      - schedules
-    variables:
-      - $SCHEDULED_PUBLISH == "TRUE"
   before_script:
     - pacman -Syu --needed --noconfirm httpie
   script:
@@ -73,24 +14,10 @@ tag_release:
           { \"name\": \"Vagrant Cloud Release\", \"url\": \"https://app.vagrantup.com/archlinux/boxes/archlinux/versions/$BUILD_VERSION\" },
           { \"name\": \"qcow2 Image\", \"url\": \"https://gitlab.archlinux.org/archlinux/arch-boxes/-/jobs/artifacts/master/raw/output/Arch-Linux-x86_64-cloudimg-$BUILD_VERSION.qcow2?job=build:secure\" }
         ]"
-    - http --ignore-stdin "$CI_API_V4_URL/projects/$CI_PROJECT_ID/releases"
-        "JOB-TOKEN:$CI_JOB_TOKEN"
-        "name=v$BUILD_VERSION"
-        "tag_name=v$BUILD_VERSION"
-        "ref=$CI_COMMIT_SHA"
-        "assets.links=$ASSET_LINKS"
-
-publish:
-  stage: publish
-  tags:
-    - secure
-  only:
-    - tags
-  before_script:
-    - pacman -Syu --needed --noconfirm vagrant
-  script:
-    - vagrant cloud auth login --token "${VAGRANT_API_TOKEN}"
-    - vagrant cloud auth login --check
-    - vagrant cloud box show archlinux/archlinux
-    - vagrant cloud publish archlinux/archlinux "v${BUILD_VERSION}" libvirt output/Arch-Linux-x86_64-libvirt-*.box --release -f
-    - vagrant cloud publish archlinux/archlinux "v${BUILD_VERSION}" virtualbox output/Arch-Linux-x86_64-virtualbox-*.box --release -f
+    - echo $ASSET_LINKS
+    # - http --ignore-stdin "$CI_API_V4_URL/projects/$CI_PROJECT_ID/releases"
+    #     "JOB-TOKEN:$CI_JOB_TOKEN"
+    #     "name=v$BUILD_VERSION"
+    #     "tag_name=v$BUILD_VERSION"
+    #     "ref=$CI_COMMIT_SHA"
+    #     "assets.links=$ASSET_LINKS"
