--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,7 @@ tag_release:
   stage: publish
   before_script:
     - pacman -Syu --needed --noconfirm httpie
+    - export BUILD_VERSION=testhello
   script:
     - >
         export ASSET_LINKS="[
@@ -18,6 +19,6 @@ tag_release:
     - http --print=B --ignore-stdin "$CI_API_V4_URL/projects/$CI_PROJECT_ID/releases"
         "JOB-TOKEN:$CI_JOB_TOKEN"
         "name=v$BUILD_VERSION"
-        "tag_name=test"
+        "tag_name=v$BUILD_VERSION"
         "ref=$CI_COMMIT_SHA"
         "assets.links=$ASSET_LINKS"
