--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,14 +11,14 @@ tag_release:
     - export BUILD_VERSION=testhello
   script:
     - >
-        export ASSET_LINKS="[
+        export ASSET_LINKS="{ \"links\": [
           { \"name\": \"Vagrant Cloud Release\", \"url\": \"https://app.vagrantup.com/archlinux/boxes/archlinux/versions/$BUILD_VERSION\" },
           { \"name\": \"qcow2 Image\", \"url\": \"https://gitlab.archlinux.org/archlinux/arch-boxes/-/jobs/artifacts/master/raw/output/Arch-Linux-x86_64-cloudimg-$BUILD_VERSION.qcow2?job=build:secure\" }
-        ]"
+        ]}"
     - echo $ASSET_LINKS
     - http --print=B --ignore-stdin "$CI_API_V4_URL/projects/$CI_PROJECT_ID/releases"
         "JOB-TOKEN:$CI_JOB_TOKEN"
         "name=v$BUILD_VERSION"
         "tag_name=v$BUILD_VERSION"
         "ref=$CI_COMMIT_SHA"
-        "assets.links=$ASSET_LINKS"
+        "assets=$ASSET_LINKS"
