[WIP] Kata-based build

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,9 +7,16 @@ stages:
   - test
   - publish
 
+# https://github.com/kata-containers/runtime/issues/175
+.katanetfix:
+  before_script:
+    - &katanetfix
+      "echo 'nameserver 1.1.1.1' > /etc/resolv.conf"
+
 shellcheck:
   stage: lint
   before_script:
+    - *katanetfix
     - pacman -Syu --needed --noconfirm shellcheck
   script:
     - shopt -s globstar
@@ -18,6 +25,7 @@ shellcheck:
 shfmt:
   stage: lint
   before_script:
+    - *katanetfix
     - pacman -Syu --needed --noconfirm shfmt
   script:
     - shopt -s globstar
@@ -26,7 +34,12 @@ shfmt:
 .build:
   stage: build
   before_script:
-    - pacman -Syu --needed --noconfirm qemu-headless libisoburn
+    - *katanetfix
+    # mount local kernel's /dev into the OCI container, local kernel is:
+    # - for runc: host kernel
+    # - for kata-runtime: VM kernel
+    - mount udev /dev -t devtmpfs -o mode=0755,nosuid
+    - pacman -Syu --needed --noconfirm gptfdisk coreutils arch-install-scripts jq btrfs-progs qemu-headless
   script:
     - |
       # If we're building a tagged release, use the tag (without the 'v' prefix) as the
@@ -37,7 +50,7 @@ shfmt:
         echo "BUILD_VERSION=$(date +%Y%m%d).$CI_JOB_ID" > build.env
       fi
     - export $(< build.env)
-    - ./build-host.sh
+    - ./build-inside-vm.sh
   after_script:
     - echo "image_size_megabytes{image=\"basic\"} $(du -m output/*basic*qcow2)" > metrics.txt
     - echo "image_size_megabytes{image=\"cloudimg\"} $(du -m output/*cloudimg*qcow2)" > metrics.txt
@@ -73,6 +86,7 @@ build:secure:
 test-vagrant-boxes-format:
   stage: test
   before_script:
+    - *katanetfix
     - pacman -Syu --needed --noconfirm vagrant
   script:
     - vagrant box add output/Arch-Linux-x86_64-virtualbox-*.box --name archlinux-vbox
@@ -85,6 +99,7 @@ test-basic-qemu:
   variables:
     SSHPASS: arch
   before_script:
+    - *katanetfix
     - pacman -Syu --needed --noconfirm qemu-headless sshpass
   script:
     - qemu-system-x86_64 -m 512 -net nic -net user,hostfwd=tcp::2222-:22 -drive file=$(ls output/Arch-Linux-x86_64-basic-*.qcow2),if=virtio -nographic &
@@ -97,6 +112,7 @@ test-cloudimg-qemu:
   variables:
     SSHPASS: passw0rd
   before_script:
+    - *katanetfix
     - pacman -Syu --needed --noconfirm qemu-headless cdrtools sshpass
   script:
     - |
@@ -135,6 +151,7 @@ tag_release:
     variables:
       - $SCHEDULED_PUBLISH == "TRUE"
   before_script:
+    - *katanetfix
     - pacman -Syu --needed --noconfirm httpie
   script:
     - >
@@ -156,6 +173,7 @@ publish:
   only:
     - tags@archlinux/arch-boxes
   before_script:
+    - *katanetfix
     - pacman -Syu --needed --noconfirm vagrant
   script:
     - vagrant cloud auth login --token "${VAGRANT_API_TOKEN}"
